# cmake_bare_metal

./: .clang-format  .gitignore  CMakeLists.txt  README.org
cmake/: Conan.cmake  MCU_selection.cmake  arm-none-eabi-toolchain.cmake  arm_stm32.cmake  check_configs.cmake  external_dep.cmake  freertos.cmake  mcu_command_targets.cmake
cmake/mcu_conf/: stm32f103xB.cmake  stm32f103xb.cmake  stm32f401xc.cmake  stm32f411xe.cmake
config/: FreeRTOSConfig.h
doc/: printhead_vision.org
libs/: CMakeLists.txt
libs/CMSIS/: CMakeLists.txt
libs/CMSIS/core_m4/: CMakeLists.txt
libs/STM32F4xx_HAL_Driver/: CMakeLists.txt
libs/conf/: CMakeLists.txt
libs/conf/mem/: STM32F103T8UX_FLASH.ld  STM32F411RETX_FLASH.ld
libs/hal/: CMakeLists.txt  hal.hpp
libs/hal/src/native/: hal.cpp
libs/hal/src/stm32/: hal.cpp
src/: CMakeLists.txt
src/Alfa/: CMakeLists.txt  main.cpp
src/Beta/: main.cpp
src/Gamma/: CMakeLists.txt  main.cpp
src/Stepper/: CMakeLists.txt
src/Stepper/Inc/: main.h
src/black_freertos/: .mxproject  CMakeLists.txt  black_freertos.ioc
src/black_freertos/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
src/black_freertos/Core/Src/: black_pill_main.cpp  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
src/black_freertos/proj_source/: proj_loop.cpp
src/black_pill/: CMakeLists.txt
src/black_pill/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
src/black_pill/Src/: main.c  stm32f4xx_it.c  syscalls.c
src/black_pill/Startup/: startup_stm32f411retx.s
src/include/common/: common.hpp
src/include/common/flash/: Serializer.hpp  flash_controller.cpp  flash_controller.hpp
src/include/conf_one/: config.hpp  stm32_assert.h
src/include/conf_two/: config.hpp
src/ph_disco/: CMakeLists.txt
src/ph_disco/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/ph_disco/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
src/sml_test/: CMakeLists.txt
src/sml_test/Inc/: main.h  stm32f4xx_it.h
src/sml_test/Src/: main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
src/sml_test/cpp/: memory.cpp  statemachine_simple.cpp  statemachine_simple.hpp
src/stm32f401_stepper/: CMakeLists.txt
src/stm32f401_stepper/Src/: main.c
src/uart_bin_parser/: CMakeLists.txt
src/uart_bin_parser/Inc/: main.h  stm32f4xx_hal_conf.h
src/uart_bin_parser/Src/: main.cpp
src/uart_bin_parser/cpp/: bin_parser.hpp  command_handler.hpp  command_parser.hpp  crc16_calc.hpp  msg_def.hpp  msg_sml.hpp
src/uart_bin_parser/cpp/address/: address_def.hpp  address_setup_com.hpp
tests/: CMakeLists.txt
tests/conan_files/: .gitignore  conanfile.txt
tests/conan_files/conan1/: conanfile.txt
tests/conan_files/conan2/: conanfile.txt
tests/libs/: CMakeLists.txt
tests/libs/hal/: CMakeLists.txt
tests/src/: CMakeLists.txt  PH_test.cpp  main_test.cpp
tests/src/Alfa/: CMakeLists.txt
tests/src/Beta/: CMakeLists.txt
tests/src/Gamma/: #CMakeLists.txt#  CMakeLists.txt
tests/src/main/: CMakeLists.txt
tests/src/uart_bin_parser/: CMakeLists.txt  address_setup_test.cpp  command_parser_test.cpp  crc_check.cpp  main_test.cpp  uart_bin_fixture.hpp
tools/gdb/: debug.gdb  debug_emacs.gdb  ocd_debug.gdb
tools/openocd/: openocd.org  run_debug.sh  run_openocd.sh  stm32f1.cfg
